Refactor code structure, update styles, and enhance modals; change font to Inter and remove settings menu item

--- a/src/app/components/overview/overview.component.html
+++ b/src/app/components/overview/overview.component.html
@@ -43,7 +43,7 @@
                             <h4>{{ remote.remoteSpecs.name }}</h4>
                             <p>
                                 <img src="assets/icons/remotes/{{ remote.remoteSpecs.type }}.svg" class="icon"
-                                    onerror="this.onerror=null;this.src='assets/icons/hard-drive.svg';" />
+                                    onerror="this.onerror=null;this.src='assets/icons/remotes/hard-drive.svg';" />
                                 {{ remote.remoteSpecs.type }}
                             </p>
                         </div>
@@ -69,7 +69,7 @@
                             <h4>{{ remote.remoteSpecs.name }}</h4>
                             <p>
                                 <img src="assets/icons/remotes/{{ remote.remoteSpecs.type }}.svg" class="icon"
-                                    onerror="this.onerror=null;this.src='assets/icons/hard-drive.svg';" />
+                                    onerror="this.onerror=null;this.src='assets/icons/remotes/hard-drive.svg';" />
                                 {{ remote.remoteSpecs.type }}
                             </p>
                         </div>
@@ -95,7 +95,7 @@
                             <h4>{{ remote.remoteSpecs.name }}</h4>
                             <p>
                                 <img src="assets/icons/remotes/{{ remote.remoteSpecs.type }}.svg" class="icon"
-                                    onerror="this.onerror=null;this.src='assets/icons/hard-drive.svg';" />
+                                    onerror="this.onerror=null;this.src='assets/icons/remotes/hard-drive.svg';" />
                                 {{ remote.remoteSpecs.type }}
                             </p>
                         </div>
