--- a/src/app/components/remote-detail/remote-detail.component.html
+++ b/src/app/components/remote-detail/remote-detail.component.html
@@ -8,6 +8,39 @@
         </p>
     </div>
 
+    <!-- Ellipsis Vertical Button -->
+    <div class="ellipsis-button-container">
+        <button matButton class="ellipsis-button" [matMenuTriggerFor]="remoteOptionsMenu">
+            <img src="assets/icons/titlebar/ellipsis-vertical.svg" class="icon icon-bw" />
+        </button>
+        <mat-menu #remoteOptionsMenu="matMenu">
+            <!-- ✅ Show in Tray Menu (Toggle) -->
+            <button mat-menu-item (click)="$event.stopPropagation();">
+                <mat-checkbox>
+                    Show in Tray Menu
+                </mat-checkbox>
+            </button>
+
+            <mat-divider></mat-divider>
+
+            <!-- ✅ Remote Actions -->
+            <button mat-menu-item>
+                <span>View Logs</span>
+            </button>
+            <button mat-menu-item>
+                <span>Export Configuration</span>
+            </button>
+
+            <mat-divider></mat-divider>
+
+            <!-- ❌ Delete Remote (Destructive Action) -->
+            <button mat-menu-item class="delete-option" (click)="deleteRemoteByName()">
+                <span>Delete Remote</span>
+            </button>
+        </mat-menu>
+
+    </div>
+
     <!-- Disk Info -->
     <div class="info-card disk-card">
         <h3><img src="assets/icons/hard-drive.svg" class="icon icon-bw" /> Disk Info</h3>
@@ -71,7 +104,7 @@
             </mat-card-content>
             <mat-divider></mat-divider>
             <mat-card-footer class="button-container">
-                <button class="edit" (click)="openRemoteConfig('remote')">
+                <button class="edit" (click)="openRemoteConfig('remote', selectedRemote.remoteSpecs)">
                     <img src="assets/icons/pen.svg" class="icon" style="filter: invert(1)" /> Edit
                 </button>
             </mat-card-footer>
@@ -89,8 +122,9 @@
                 <mat-card-content class="spec-content">
                     <mat-chip-set class="specs-container">
                         <!-- ✅ Show normal settings if available -->
-                        <mat-chip *ngFor="let spec of getRemoteSettings(section.key) | keyvalue" class="spec-pill"
-                            matTooltip="{{ spec.value | json }}" matTooltipPosition="above" [matTooltipHideDelay]="500">
+                        <mat-chip *ngFor="let spec of getRemoteSettings(section.key + '_options') | keyvalue"
+                            class="spec-pill" matTooltip="{{ spec.value | json }}" matTooltipPosition="above"
+                            [matTooltipHideDelay]="500">
                             <strong>{{ spec.key }}:</strong>
                             <span>{{ truncateValue(spec.value, 30) }}</span>
                         </mat-chip>
@@ -106,7 +140,8 @@
 
                 <!-- ✅ Edit Button -->
                 <mat-card-footer class="button-container">
-                    <button class="edit" (click)="openRemoteConfig(section.key)">
+                    <button class="edit"
+                        (click)="openRemoteConfig(section.key, getRemoteSettings(section.key + '_options'))">
                         <img src="assets/icons/pen.svg" class="icon" style="filter: invert(1)" />
                         Edit
                     </button>
@@ -115,10 +150,4 @@
         </div>
         <mat-divider></mat-divider>
     </ng-container>
-
-
-    <!-- Delete Button -->
-    <button class="delete" (click)="deleteRemoteByName()">
-        <img src="assets/icons/trash.svg" class="icon" style="filter: invert(1)" /> Delete
-    </button>
 </div>
