--- a/src/app/components/remote-detail/remote-detail.component.scss
+++ b/src/app/components/remote-detail/remote-detail.component.scss
@@ -13,6 +13,22 @@
     align-items: center;
   }
 
+  .ellipsis-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+
+    &.hover {
+      background-color: var(--hover-color);
+    }
+  }
+
   p {
     font-size: 20px;
     display: flex;
