--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,6 +40,7 @@
     <app-remote-detail *ngIf="selectedRemote" [selectedRemote]="selectedRemote" [remoteSettings]="loadRemoteSettings(selectedRemote.remoteSpecs.name)"
       (openInFiles)="openRemoteInFiles($event)" (mountRemote)="mountRemote($event)"
       (unmountRemote)="unmountRemote($event)" (deleteRemote)="deleteRemote($event)"
+      (saveRemoteSettings)="saveRemoteSettings($event.remoteName, $event.settings)"
       (openRemoteConfigModal)="openRemoteConfigModal($event.editTarget, $event.existingConfig)" style="width: 100%;">
     </app-remote-detail>
 
