--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -115,12 +115,13 @@ $rclone-manager-dark-theme: mat.m2-define-dark-theme(
   --selected-border: #007bff;
   --green: #5CB85C;
   --orange: #F89F24;
-  --red: #FF0000;
-  --blue: #2196F3;
+  --red: #c30000;
+  --blue: #3584e4;
   --purple: #9747FF;
 
   /* Default values */
   --border-radius: 8px;
+  --button-border-radius: 12px;
   --title-bar-padding: 8px;
   --titlebar-height: 40px; // Adjust this value to match your title bar height
   --titlebar-border: 1px;
@@ -157,7 +158,7 @@ button {
   cursor: pointer;
   padding: 6px 12px;
   border: none;
-  border-radius: var(--border-radius);
+  border-radius: var(--button-border-radius);
   font-size: 20px;
   display: flex;
   align-items: center;
@@ -200,6 +201,10 @@ button {
   &.delete,
   &.unmount {
     background-color: var(--red);
+  }
+
+  &.cancel {
+    background-color: var(--secodary-text-color);
   }
 
   &.edit,
@@ -264,7 +269,7 @@ input, textarea, [contenteditable="true"] {
 }
 
 .mat-mdc-dialog-container .mdc-dialog__surface {
-  border-radius: 24px !important;
+  border-radius: 18px !important;
   color: var(--app-text-color) !important;
   background-color: var(--app-background) !important;
 }
