--- a/src/app/components/onboarding/onboarding.component.scss
+++ b/src/app/components/onboarding/onboarding.component.scss
@@ -21,7 +21,7 @@
   display: flex;
   background-color: var(--app-background);
   border-radius: 16px;
-  height: 426px;
+  height: 470px;
   width: 535px;
   justify-content: center;
   align-items: center;
@@ -40,9 +40,17 @@
   flex-direction: column;
   align-items: center;
   
-  img {
-    width: 200px;
-    height: 200px;
+
+  .folder-button {
+    padding: 4px 8px;
+    margin: 4px;
+  }
+  
+  img:not(.icon) {
+    max-width: 190px;
+    max-height: 190px;
+    width: 100%;
+    height: auto;
   }
   &.active {
     opacity: 1;
